--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block title %}Hello HomeController!{% endblock %}
 
@@ -17,4 +17,19 @@
         <li>Your template at <code><a href="{{ 'C:/Users/caria/symphodsesmorts/my_project/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
     </ul>
 </div>
-{% endblock %}
+{% endblock %} #}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>home</title>
+</head>
+<body>
+    <h1>Home</h1>
+    <h1>{{ n }}</h1>
+    <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ducimus consequatur libero quod ab, consectetur illum. Eius quam, odit cupiditate veritatis doloribus quae. Eaque commodi, ducimus perferendis provident eveniet praesentium.</span><span>Aspernatur eligendi ut quod reiciendis aliquam nulla, praesentium cum sapiente sequi? Eligendi, accusamus saepe consectetur ipsum laborum eos? Amet nam quo laboriosam tempore natus at doloremque quam beatae? Itaque, perspiciatis!</span><span>Sunt quidem enim sapiente, exercitationem tempora excepturi et! Unde fuga atque consequatur deleniti asperiores cumque dolorem reprehenderit fugiat similique? Blanditiis harum repudiandae sunt beatae velit error praesentium! A, sint natus!</span><span>Cum dolores veritatis neque aliquid reiciendis, eveniet optio totam eaque voluptatum nisi similique perspiciatis esse repellat inventore aperiam a sapiente doloremque autem culpa tempora perferendis numquam animi? Minus, aperiam id.</span><span>Doloremque tempore nisi vitae. Cum unde dolor repudiandae corrupti ab asperiores sit officia explicabo at earum, nam soluta voluptatibus officiis labore deserunt, magni numquam enim culpa, error dicta! Fugiat, perferendis.</span><span>Provident eveniet, saepe dolorem reiciendis asperiores libero, aliquam, deserunt quidem sed praesentium deleniti! Amet, omnis dolorem. Dolor dolores laborum nulla architecto porro laboriosam nisi, eveniet tenetur necessitatibus autem sit? Vero!</span><span>Voluptatibus exercitationem deleniti aut! Aspernatur, qui neque incidunt exercitationem rem vel, amet, ipsum nisi in suscipit ex quibusdam sed deleniti aperiam repellat dolores nihil enim sint perspiciatis praesentium illum quae!</span><span>Accusamus architecto cupiditate ratione officiis inventore nemo eius non consequatur earum dicta nam, modi vitae odit alias. Vitae doloremque amet nihil illum id vel inventore libero ea voluptate, eos corrupti?</span></p>
+</body>
+</html>
